apps/pgadmin/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  labels:
    app: pgadmin
spec:
  replicas: 0
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      securityContext:
        runAsUser: 5050
        runAsGroup: 5050
        fsGroup: 5050
        fsGroupChangePolicy: OnRootMismatch
      containers:
      - name: pgadmin
        image: dpage/pgadmin4:8.12
        imagePullPolicy: IfNotPresent
        ports:
          - name: http
            containerPort: 80
        resources:
          requests:
            cpu: 50m
            memory: 256Mi
        volumeMounts:
          - name: pgadmin-data
            mountPath: /var/lib/pgadmin
      volumes:
          - name: pgadmin-data
            persistentVolumeClaim:
              claimName: pgadmin-data
